--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,12 +5,12 @@ body {
    background-color: aqua;
 
    div {
-      font-size: 10px;
+      font-size: 20px;
    }
 }
 .block {
 
-   &__item { color: red;
+   &__item { color: green;
    }
 }
 .block {
